moved from polaama to polaama-backend.com

--- a/html-templates/home.html
+++ b/html-templates/home.html
@@ -59,8 +59,8 @@
   <div data-role="footer">
     <h3>
       2017 Polaama. All rights reserved.
-      <a href="https://polaama.com/privacy-policy" data-ajax="false" target="blank">Privacy</a>
-      <a href="https://polaama.com/terms-of-service" data-ajax="false" target="blank">Terms</a>
+      <a href="/privacy-policy" data-ajax="false" target="blank">Privacy</a>
+      <a href="/terms-of-service" data-ajax="false" target="blank">Terms</a>
     </h3>
   </div>
 
