--- a/html-templates/terms-of-service.html
+++ b/html-templates/terms-of-service.html
@@ -1,5 +1,5 @@
 <h1>Polaama Terms of Service</h1>
-<b>Last updated</b>: April 20, 2017
+<b>Last updated</b>: March 2018
  
 <p>Please read these Terms of Service ("Terms", "Terms of Service") carefully before using the https://polaama.com website and the Polaama facebook messenger bot (the "Service") operated by Polaama ("us", "we", or "our").</p>
   
@@ -28,4 +28,4 @@
 <h2>Contact Us</h2>
 <p>If you have any questions about this Privacy Policy, please contact us at <a href="mailto:help.polaama@gmail.com?Subject=Question%20about%20Privacy%20Policy" target="_top">help.polaama@gmail.com</a></p>
 
-<p>2016-2017, Polaama. All rights reserved.</p>
+<p>2018, Polaama. All rights reserved.</p>
