--- a/html-templates/privacy-policy.html
+++ b/html-templates/privacy-policy.html
@@ -1,7 +1,7 @@
 <html>
 <h1>Polaama Privacy Policy</h2>
 
-<p><b>Last updated</b>: April 20 2017</p>
+<p><b>Last updated</b>: Mar 2018</p>
 
 <p>Polaama ("us", "we", or "our") operates the https://polaama.com website ("the Site") and the Polaama facebook messenger bot. It simplifies travel planning for you by aggregating information about your travel plans and securely storing them for easy access. This page informs you of our policies regarding the collection, use and disclosure of Personal Information we receive from users of the Site.</p>
 
@@ -51,6 +51,6 @@
 <h2>6) Contact Us</h2>
 <p>If you have any questions about this Privacy Policy, please contact us at <a href="mailto:help.polaama@gmail.com?Subject=Question%20about%20Privacy%20Policy" target="_top">help.polaama@gmail.com</a></p>
 
-<p>2016-2017, Polaama. All rights reserved.</p>
+<p>2018, Polaama. All rights reserved.</p>
 
 </html>
